# pepper_behavior_sandbox

./: .gitignore  CMakeLists.txt  README.md  setup.py
actuators/: base_control.py  head_control.py  ros_string_pub.py  talk.py
pepper_behavior/actuators/: arm_control.py  base_control.py  head_control.py  ros_string_pub.py  talk.py
pepper_behavior/flexbe_behaviors/: CMakeLists.txt
pepper_behavior/flexbe_behaviors/manifest/: ar_flex_demo.xml  leadtoappartmentdemo.xml  pepper_ar_demo.xml  pepper_demo.xml
pepper_behavior/flexbe_behaviors/src/flexbe_behaviors/: ar_flex_demo_sm.py  leadtoappartmentdemo_sm.py  pepper_ar_demo_sm.py  pepper_demo_sm.py
pepper_behavior/generic_flexbe_states/: CMakeLists.txt  package.xml  setup.py
pepper_behavior/generic_flexbe_states/src/generic_flexbe_states/: text_to_speech_state.py
pepper_behavior/pepper_flexbe_states/: CMakeLists.txt  package.xml  setup.py
pepper_behavior/sensors/: id_sensor.py  person_sensor.py  ros_sub.py  speechsensor.py
pepper_behavior/skills/: SpeechAnalyser.py  animation_player.py  calculate_person_position.py  iterate.py  move_head.py  point.py  ssl.py  state_publisher.py  talk.py  template.py  turn_base.py  turn_base_without.py
skills/: animation_player.py  iterate.py  move_head.py  talk.py  turn_base.py
smach/: geniale_experiment.py  pepper_smach_geniale_2017.py  pepper_smach_itelligence_reject_speech.py  video_introduction.py
tasks/: itelligence_demo_2017.py  itelligence_demo_2017_1.py  itelligence_demo_2017_2.py  itelligence_reject_speech.py  video_introduction.py
(+9 files in other folders)
